clean the repo and update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-# local package
--e .
-
+alembic==1.4.2
 altair==4.1.0
 astor==0.8.1
 astropy==4.0.1.post1
 attrs==19.3.0
+autograd==1.3
+autograd-gamma==0.4.2
 backcall==0.1.0
 base58==2.0.0
 bleach==3.1.5
@@ -15,8 +15,12 @@ cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
+cliff==3.1.0
 cloudpickle==1.4.1
+cmaes==0.5.0
+cmd2==0.8.9
 colorama==0.4.3
+colorlog==4.1.0
 confuse==1.1.0
 cycler==0.10.0
 dask==2.16.0
@@ -27,11 +31,13 @@ docutils==0.15.2
 entrypoints==0.3
 enum-compat==0.0.3
 featuretools==0.14.0
+future==0.18.2
 graphviz==0.14
 HeapDict==1.0.1
 htmlmin==0.1.12
 idna==2.9
 ImageHash==4.1.0
+imbalanced-learn==0.7.0
 importlib-metadata==1.6.0
 ipykernel==5.3.0
 ipython==7.14.0
@@ -44,9 +50,12 @@ joblib==0.15.1
 jsonschema==3.2.0
 jupyter-client==6.1.3
 jupyter-core==4.6.3
+kaggle==1.5.6
 kiwisolver==1.2.0
+lifelines==0.24.13
 lightgbm==2.3.1
 llvmlite==0.32.1
+Mako==1.1.3
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 missingno==0.4.2
@@ -54,19 +63,25 @@ mistune==0.8.4
 msgpack==1.0.0
 nbconvert==5.6.1
 nbformat==5.0.6
+nbstripout==0.3.7
 networkx==2.4
+ngboost==0.2.1.dev0
 notebook==6.0.3
 numba==0.49.1
 numpy==1.18.4
+optuna==1.5.0
 packaging==20.4
 pandas==1.0.3
 pandas-profiling==2.8.0
 pandocfilters==1.4.2
 parso==0.7.0
 pathtools==0.1.2
+pbr==5.4.5
 phik==0.9.12
 pickleshare==0.7.5
 Pillow==7.1.2
+plotly==4.8.1
+prettytable==0.7.2
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
 protobuf==3.12.1
@@ -74,8 +89,12 @@ psutil==5.7.0
 pydeck==0.3.1
 Pygments==2.6.1
 pyparsing==2.4.7
+pyperclip==1.8.0
+pyreadline==2.1
 pyrsistent==0.16.0
 python-dateutil==2.8.1
+python-editor==1.0.4
+python-slugify==4.0.1
 pytz==2020.1
 PyWavelets==1.1.1
 pywin32==227
@@ -83,19 +102,26 @@ pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==19.0.1
 requests==2.23.0
+retrying==1.3.3
 s3transfer==0.3.3
 scikit-learn==0.23.1
+scikit-plot==0.3.7
 scipy==1.4.1
 seaborn==0.10.1
 Send2Trash==1.5.0
+shap==0.35.0
 six==1.14.0
 sklearn==0.0
 sortedcontainers==2.1.0
+SQLAlchemy==1.3.17
+-e git+https://github.com/tgrandjean/OC-home-credit-default-risk.git@3cd618119012bc713d72816ba0db78b130b279d2#egg=src
+stevedore==2.0.0
 streamlit==0.60.0
 tangled-up-in-unicode==0.0.6
 tblib==1.6.0
 terminado==0.8.3
 testpath==0.4.4
+text-unidecode==1.3
 threadpoolctl==2.0.0
 toml==0.10.1
 toolz==0.10.0
@@ -103,12 +129,13 @@ tornado==5.1.1
 tqdm==4.46.0
 traitlets==4.3.3
 tzlocal==2.1
-urllib3==1.25.9
+urllib3==1.24.3
 validators==0.15.0
 visions==0.4.4
 watchdog==0.10.2
 wcwidth==0.1.9
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+xgboost==1.1.1
 zict==2.0.0
 zipp==3.1.0
